<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFDFE5"
    tools:context=".GameSetup">

    <TextView
        android:id="@+id/setup_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="77dp"
        android:layout_marginBottom="78dp"
        android:text="@string/game_setup_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/player1_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/player1_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/P1"
        app:layout_constraintBaseline_toBaselineOf="@+id/player1_edit"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/P1" />

    <TextView
        android:id="@+id/player2_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="7dp"
        android:text="@string/P2"
        app:layout_constraintBottom_toBottomOf="@+id/player2_edit"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/player1_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="174dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/player1_setup"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/player2_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/player2_setup"
        app:layout_constraintTop_toBottomOf="@+id/player1_edit" />

    <Button
        android:id="@+id/setup_startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="195dp"
        android:layout_marginBottom="195dp"
        android:onClick="onSetupStartButton"
        android:text="@string/start_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2_edit" />
</androidx.constraintlayout.widget.ConstraintLayout>